[package]
name = "main-state"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "thrust_app"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.16.24"
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.3"
spl-token = "4.0.0"
